; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_post-callback.c_read_callback.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_post-callback.c_read_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.WriteThis = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i64, i8*)* @read_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @read_callback(i8* %0, i64 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.WriteThis*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %13 = load i8*, i8** %9, align 8
  %14 = bitcast i8* %13 to %struct.WriteThis*
  store %struct.WriteThis* %14, %struct.WriteThis** %10, align 8
  %15 = load i64, i64* %7, align 8
  %16 = load i64, i64* %8, align 8
  %17 = mul i64 %15, %16
  store i64 %17, i64* %11, align 8
  %18 = load %struct.WriteThis*, %struct.WriteThis** %10, align 8
  %19 = getelementptr inbounds %struct.WriteThis, %struct.WriteThis* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %49

22:                                               ; preds = %4
  %23 = load %struct.WriteThis*, %struct.WriteThis** %10, align 8
  %24 = getelementptr inbounds %struct.WriteThis, %struct.WriteThis* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  store i64 %25, i64* %12, align 8
  %26 = load i64, i64* %12, align 8
  %27 = load i64, i64* %11, align 8
  %28 = icmp ugt i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %22
  %30 = load i64, i64* %11, align 8
  store i64 %30, i64* %12, align 8
  br label %31

31:                                               ; preds = %29, %22
  %32 = load i8*, i8** %6, align 8
  %33 = load %struct.WriteThis*, %struct.WriteThis** %10, align 8
  %34 = getelementptr inbounds %struct.WriteThis, %struct.WriteThis* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* %12, align 8
  %37 = call i32 @memcpy(i8* %32, i64 %35, i64 %36)
  %38 = load i64, i64* %12, align 8
  %39 = load %struct.WriteThis*, %struct.WriteThis** %10, align 8
  %40 = getelementptr inbounds %struct.WriteThis, %struct.WriteThis* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = add i64 %41, %38
  store i64 %42, i64* %40, align 8
  %43 = load i64, i64* %12, align 8
  %44 = load %struct.WriteThis*, %struct.WriteThis** %10, align 8
  %45 = getelementptr inbounds %struct.WriteThis, %struct.WriteThis* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = sub i64 %46, %43
  store i64 %47, i64* %45, align 8
  %48 = load i64, i64* %12, align 8
  store i64 %48, i64* %5, align 8
  br label %50

49:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %50

50:                                               ; preds = %49, %31
  %51 = load i64, i64* %5, align 8
  ret i64 %51
}

declare dso_local i32 @memcpy(i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
